# Market-Cycle-Gene-Forecasting-Engine

./: README.md  pyproject.toml
data/: gene_history_example.csv
mcgf/: cli.py  forecasting.py  loader.py  models.py
