[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "market-cycle-gene-forecasting-engine"
version = "0.1.0"
description = "Forecast tokenomic gene frequencies across market cycles."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mcgf = "mcgf.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
